--- a/style.css
+++ b/style.css
@@ -1,44 +1,78 @@
 *{
-    margin: 30;
+    margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
 }
 
-body {
+body{
+    margin-top: 500px;
     text-align: center;
     font-family: sans-serif;
+
 }
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .head {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 30;
     background: #171717;
-    position: fixed;
-    width: 100%;
-    z-index: 100%;
+    width: 100%; 
 }
 
-.navbar{
+.navbar {
     display: flex;
     margin-right: 10px;
 }
+
+
+.Nosotros {
+    display: flex;
+    height: 69vh !important;
+    background: url(./montañas.jpg) no-repeat center;
+    background-size: cover;
+    justify-content: center; /* Centra el contenedor en el eje horizontal */
+}
+
+.info{
+    padding: 0 5% 1% ;
+}
+.botones{
+    padding: 20px;
+}
+
+.btn {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px  40px;
+    border: 2px solid color #9c27b0;
+    color: #fff;
+    text-decoration: none;
+    background: #9c27b0;
+  }
+  
+  .btn:hover {
+    background-color: #45a049;
+  }
+  
+  .btn:active {
+    background-color: #3e8e41;
+  }
+  
+
 .logo{
     margin-left: 30px;
 }
+
 .logo a {
     text-decoration: none; 
     color: #fff;
     text-transform: uppercase;
     font-size: 20;
 }
+
 .navbar a {
     display: block;
     padding: 30px 20px;
@@ -47,25 +81,34 @@ header{
     text-transform: uppercase;
     font-size: 20px;
 }
+
 .navbar a:hover {
     background: #3f3f3f;
 }
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.header {
-  height: 60vh !important;
-   background: url(img/header.jpg) no-repeat center;
-   background-size: cover;
-}
+
 .title {
-    margin-top: 40px;
+    margin-top:  0px;
     font-size: 60px;
     font-weight: 600;
     text-transform: uppercase;
 }
 
+p { 
+    margin-bottom: 40px;
+    font-size: 18px;
+}
 
+.contacto {
+    padding: 3%;
+}
 
+img{
+    align-content: center;
+}
+
+.cont {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+}
