--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 }
 
-.head {
+/* .head {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,22 +22,29 @@ body{
     width: 100%; 
     position: sticky;
     top: 0%;
-}
+} */
 
-.navbar {
-    display: flex;
+/* .navbar {
+   display: flex;
     margin-right: 10px;
     position: sticky;
     top: 20px;
+} */
+.navbar {
+    background: #171717;
+    display: flex;
+    justify-content: space-between;
+    position: sticky;
+    align-items: center;
+    top: 0%;
 }
-
 
 .Nosotros {
     display: flex;
     height: 69vh !important;
     background: url(bienvenido.gif) no-repeat center;
     background-size: cover;
-    justify-content: center; /* Centra el contenedor en el eje horizontal */
+    justify-content: center; 
 }
 
 .info{
@@ -68,27 +75,37 @@ body{
   
 
 .logo{
-    margin-left: 30px;
+    /* margin-left: 30px;
     margin-top: 40px;
-    width: 150px;
+    width: 150px; */
+    padding: 15px;
 
 }
 
-.logo a {
+/* .logo a {
     text-decoration: none; 
     color: #fff;
     text-transform: uppercase;
     font-size: 20;
-}
+} */
 
 .navbar a {
-    display: block;
-    padding: 30px 20px;
+    padding: 15px 20px;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 20px;
     
+}
+.navbar ul {
+    list-style-type: none;
+    padding: 30px 10px;
+
+    
+}
+.navbar li {
+    display: inline-block;
+
 }
 
 .navbar a:hover {
@@ -133,11 +150,13 @@ img{
 }
 
 .box-container {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
     flex-wrap: wrap;
     text-align: center;
-    
+    align-items: baseline; */
+    justify-content: center;
+    display: flex;
+    align-self: center;
 }
 
 .box-container .box {
@@ -161,13 +180,13 @@ img{
     background: #171717;
     background-size: cover;
     background: #171717;
-    
+    padding: 10vh 0;
     
 }
 
 .precio {
+    height: 40vh !important;
     background: url(GRADIANTE.gif) no-repeat center;
-    background-attachment: fixed;
     background-size: cover;
     text-align: center;
     
@@ -176,8 +195,15 @@ img{
 .contacto {
     padding-top: 0px;
     background: #171717;
-    padding-bottom: 0;
+    padding-bottom: 50px;
     font-size: 100%;
+    justify-content: center;
+}
+.information {
+    display: flex;
+    /* justify-content: center; */
+
+
 }
 .titulos {
     padding-top: 30px;
@@ -187,5 +213,73 @@ img{
     text-transform: uppercase;
     color: #fff;
 }
+.contacto .title {
+    display: flex;
+    justify-content: center;
+    margin-top: 0px;
+    font-size: 60px;
+    font-weight: 600;
+    text-align: center;
+    color: #fff;
+    top: 20px;
+}
 
+.form-content h2 {
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 25px;
+}
 
+.form-contacto {
+    display: flex;
+    flex-direction: column;
+    font-size: 25px;
+    
+}
+
+ label {
+    font-size: 21px;
+    color: #fff;
+    text-align: start;
+    
+ }
+
+ input , textarea {
+    padding: 17px 14px;
+    background-color: #333646;
+    border: 0;
+    font-size: 15px;
+    color: #f4f6f9;
+    margin-bottom: 20px;
+    border-radius: 10px;
+ }
+ .focus {
+    outline: 1px solid #1e92e9;
+
+ }
+ /* .btn-enviar {
+    font-size: 17px;
+    color: #fff;
+    margin-top: 20px;
+ } */
+ .pie-pag {
+    padding: 40px 0;
+    background-color: #333646;
+ }
+ .pie-pag i {
+    padding: 0 5px;
+    color: #f9f9f9;
+ }
+.mapita {
+    margin: 23px 250px;
+
+}
+.btn-enviar {
+    background-color: #3e8e41;
+    color: #fff;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+.btn-enviar:hover {
+    background: #000000;
+}
